# federated-agent-audit

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: agentleak_generate_traces.py  agentleak_integration.py  detection_eval.py  detection_results.json  dp_eval.py  results.json  run_all.py  scenarios.py
benchmarks/a2a_mt/: __init__.py  a2a_adaptive.py  a2a_attested_eval.py  a2a_baseline_compare.py  a2a_baselines.py  a2a_dp_eval.py  a2a_eval.py  a2a_families.py  a2a_generate_text.py  a2a_heldout_gen.py  a2a_inference_validate.py  a2a_measurement.py  a2a_scenarios.py  a2a_tagger_eval.py
deploy/: serve.sh
docs/: A2A_QUICKSTART.md  ARCHITECTURE.md  CASE_STUDY.md  PRIVACY_GUARANTEE.md
examples/: a2a_langgraph_app.py  a2a_live_app.py  a2a_privacy_demo.py  a2a_serve.py  case_study_healthcare_leak.py  crewai_audit_demo.py  crewai_live_audit.py  demo_live.py  group_chat_audit.py  marketplace_forced_embed.py  multiagent_trace_demo.py  openai_firewall_demo.py  telegram_audit_demo.py  telegram_audit_report.html  telegram_bot_real.py
examples/policies/: finance_bot.json  hr_bot.yaml
paper/: A2A_MT_PAPER.md  DRAFT.md  OUTLINE.md
paper/submission/: README.md  main.tex
research/: A2A_MULTITENANT_PRIVACY.md  PMF_PLAN.md
src/federated_agent_audit/: __init__.py  access_control.py  attestation.py  blame.py  cascade_detector.py  channel_auditor.py  cli.py  commit_reveal.py  compositional_leak.py  compound_attack.py  config.py  cross_container.py  cross_platform_denanon.py  desensitizer.py  dp_mechanism.py  embeddings.py  epoch_chain.py  injection_detector.py  integrity.py  lifecycle.py  llm_judge.py  local_auditor.py  memory_audit.py  merkle.py  negative_inference.py  network_auditor.py  privacy_gate.py  privacy_loss.py  regulatory_compliance.py  risk_aggregator.py  scenario_classifier.py  schemas.py  semantic_detector.py  session_identity.py  taint_tracker.py  topology.py
src/federated_agent_audit/a2a/: __init__.py  attest.py  auditor.py  dashboard.py  demo.py  inference.py  privacy.py  service.py  session.py  tagger.py  telegram_bot.py  types.py
src/federated_agent_audit/reporting/: __init__.py  html_report.py
src/federated_agent_audit/sdk/: __init__.py  _entry_builder.py  _facade.py  autogen.py  crewai.py  generic.py  intercept.py  langchain.py  llamaindex.py  multiagent.py  openai_agents.py
src/federated_agent_audit/transport/: __init__.py  client.py  server.py  (+1 more)
tests/: test_a2a_mt.py  test_access_control.py  test_agentleak_adapter.py  test_attestation.py  test_autogen_integration.py  test_blame.py  test_cascade_detector.py  test_channel_auditor.py  test_cli.py  test_commit_reveal.py  test_compositional_leak.py  test_compound_attack.py  test_crewai_integration.py  test_cross_container.py  test_cross_platform_denanon.py  test_desensitizer.py  test_detection_benchmark.py  test_dp_mechanism.py  test_dp_robustness.py  test_embeddings.py  test_epoch_chain.py  test_html_report.py  test_injection_detector.py  test_integrity.py  test_intercept.py  test_langchain_integration.py  test_langgraph_live.py  test_lifecycle.py  test_llamaindex_integration.py  test_llm_judge.py  test_memory_audit.py  test_multiagent_tracer.py  test_negative_inference.py  test_openai_agents_integration.py  test_privacy_gate.py  test_privacy_loss.py  test_real_world_scenarios.py  test_regulatory_compliance.py  test_risk_aggregator.py  test_scenario_classifier.py  (+10 more)
