[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "federated-agent-audit"
version = "0.1.0"
description = "Federated auditing protocols for multi-agent systems"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
