[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-agent-audit"
version = "0.1.0"
description = "Federated auditing protocols for multi-agent systems"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
    "numpy>=1.24",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.50"]
embeddings = ["sentence-transformers>=2.2"]
transport = ["httpx>=0.25", "fastapi>=0.100", "uvicorn>=0.20"]
all = [
    "federated-agent-audit[langchain,crewai,embeddings,transport]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
