[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-agent-audit"
version = "0.3.0"
description = "Privacy-preserving audit framework for multi-agent AI systems. Detects cross-agent data leaks, inference attacks, and compliance violations — without accessing raw content."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Justin Yuan", email = "aojieyua@usc.edu"},
]
keywords = [
    "audit", "privacy", "multi-agent", "federated", "llm",
    "compliance", "gdpr", "ai-safety", "agent", "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
    "numpy>=1.24",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
langchain = ["langchain-core>=0.2"]
langgraph = ["langgraph>=0.2", "langchain-core>=0.2"]
crewai = ["crewai>=0.50"]
autogen = ["pyautogen>=0.2"]
openai-agents = ["openai-agents>=0.1"]
llamaindex = ["llama-index>=0.11"]
embeddings = ["sentence-transformers>=2.2"]
transport = ["httpx>=0.25", "fastapi>=0.100", "uvicorn>=0.20"]
yaml = ["pyyaml>=6.0"]
all = [
    "federated-agent-audit[langchain,langgraph,crewai,autogen,openai-agents,llamaindex,embeddings,transport,yaml]",
]

[project.scripts]
federated-audit = "federated_agent_audit.cli:main"

[project.urls]
Homepage = "https://github.com/Justin0504/federated-agent-audit"
Repository = "https://github.com/Justin0504/federated-agent-audit"
Issues = "https://github.com/Justin0504/federated-agent-audit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
federated_agent_audit = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
